--- a/portfolio.html
+++ b/portfolio.html
@@ -14,11 +14,14 @@
                 <nav class="header-navigation">
                     <a class="header-logo link" href="./index.html">Web<span class="header-logo-color link">Studio</span></a>
         
-        <ul class="header-menu-list list">
-            <li class="header-menu-item"><a class="header-menu-link link" href="./index.html">Studio</a></li>
-            <li class="header-menu-item"><a class="header-menu-link link" href="./portfolio.html">Portfolio</a></li>
-            <li class="header-menu-item"><a class="header-menu-link link" href="">Contacts</a></li>
-        </ul>
+                    <ul class="header-menu-list list">
+                        <li class="header-menu-item">
+                            <a class="header-menu-link link" href="./index.html">Studio</a></li>
+                        <li class="header-menu-item current-2">
+                            <a class="header-menu-link link" href="./portfolio.html">Portfolio</a></li>
+                        <li class="header-menu-item">
+                            <a class="header-menu-link link" href="">Contacts</a></li>
+                    </ul>
         </nav>
         <address class="header-address-contact">
             <ul class="header-address-list list">
@@ -44,91 +47,136 @@
             <ul class="tabs-list list">
                 <li class="tabs-item">
                     <a class="tabs-link link" href="">
+                        <div class="tabs-cover-wrap">
                         <img class="tabs-img" 
                         src="./images/img-1-portfolio.jpg" 
                         width="360" 
                         height="300" 
                         alt="picture-of-banking-app-interface">
+                        <div class="tabs-cover">
+                            <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                    </div>
                     <div class="container tabs-content">
                         <h2 class="tabs-title">Banking App Interface Concept</h2>
                         <p class="tabs-text">App</p></div></a></li>
                 <li class="tabs-item">
                     <a class="tabs-link link" href="">
+                        <div class="tabs-cover-wrap">
                         <img class="tabs-img" 
                         src="./images/img-2-portfolio.jpg" 
                         width="360" 
                         height="300" 
                         alt="picture-of-cashless-payment">
+                        <div class="tabs-cover">
+                            <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        </div>
                     <div class="container tabs-content">
                         <h2 class="tabs-title">Cashless Payment</h2>
                         <p class="tabs-text">Marketing</p></div></a></li>
                 <li class="tabs-item">
                     <a class="tabs-link link" href="">
+                        <div class="tabs-cover-wrap">
                         <img class="tabs-img" 
                         src="./images/img-3-portfolio.jpg" 
                         width="360" 
                         height="300" 
                         alt="picture-of-meditation-app">
+                        <div class="tabs-cover">
+                            <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        </div>
                     <div class="container tabs-content">
                         <h2 class="tabs-title">Meditation App</h2>
                         <p class="tabs-text">App</p></div></a></li>
                 <li class="tabs-item">
                     <a class="tabs-link link" href="">
+                        <div class="tabs-cover-wrap">
                         <img class="tabs-img" 
                         src="./images/img-4-portfolio.jpg" 
                         width="360" 
                         height="300" 
                         alt="picture-of-taxi-service">
+                        <div class="tabs-cover">
+                            <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        </div>
                     <div class="container tabs-content">
                         <h2 class="tabs-title">Taxi Service</h2>
                         <p class="tabs-text">Marketing</p></div></a></li>
                 <li class="tabs-item">
                     <a class="tabs-link link" href="">
+                        <div class="tabs-cover-wrap">
                         <img class="tabs-img" 
                         src="./images/img-5-portfolio.jpg" 
                         width="360" 
                         height="300" 
                         alt="picture-of-screen-illustration">
+                        <div class="tabs-cover">
+                            <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        </div>
                     <div class="container tabs-content">
                         <h2 class="tabs-title">Screen Illustrations</h2>
                         <p class="tabs-text">Design</p></div></a></li>
                 <li class="tabs-item">
                     <a class="tabs-link link" href="">
+                        <div class="tabs-cover-wrap">
                         <img class="tabs-img" 
                         src="./images/img-6-portfolio.jpg" 
                         width="360" 
                         height="300" 
                         alt="picture-of-online-courses">
+                        <div class="tabs-cover">
+                            <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        </div>
                     <div class="container tabs-content">
                         <h2 class="tabs-title">Online Courses</h2>
                         <p class="tabs-text">Marketing</p></div></a></li>
                 <li class="tabs-item">
                     <a class="tabs-link link" href="">
+                        <div class="tabs-cover-wrap">
                         <img class="tabs-img" 
                         src="./images/img-7-portfolio.jpg" 
                         width="360" 
                         height="300" 
                         alt="picture-of-instagram-stories-concept">
+                        <div class="tabs-cover">
+                            <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        </div>
                     <div class="container tabs-content">
                         <h2 class="tabs-title">Instagram Stories Concept</h2>
                         <p class="tabs-text">Design</p></div></a></li>
                 <li class="tabs-item">
                     <a class="tabs-link link" href="">
+                        <div class="tabs-cover-wrap">
                         <img class="tabs-img" 
                         src="./images/img-8-portfolio.jpg" 
                         width="360" 
                         height="300" 
                         alt="picture-of-organic-food">
+                        <div class="tabs-cover">
+                            <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        </div>
                     <div class="container tabs-content">
                         <h2 class="tabs-title">Organic Food</h2>
                         <p class="tabs-text">Web Site</p></div></a></li>
                 <li class="tabs-item">
                     <a class="tabs-link link" href="">
+                        <div class="tabs-cover-wrap">
                         <img class="tabs-img" 
                         src="./images/img-9-portfolio.jpg" 
                         width="360" 
                         height="300" 
                         alt="picture-of-fresh-coffee">
+                        <div class="tabs-cover">
+                            <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        </div>
                     <div class="container tabs-content">
                         <h2 class="tabs-title">Fresh Coffee</h2>
                         <p class="tabs-text">Web Site</p></div></a></li>
@@ -138,9 +186,65 @@
 </main>
 
 <footer class="footer-item">
-    <div class="container">
+    <div class="footer-container container">
+        <div class="container-footer-logo">
         <a href="./index.html" class="logo-link link">Web<span class="footer-logo">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </div>
+
+        <div class="footer-socials">
+        <p class="footer-socials-title">Social media</p>
+        <ul class="footer-socials-list list">
+            <li class="footer-socials-item">
+                <a
+                class="footer-socials-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                >
+                <svg class="footer-socials-icon" width="24px" height="24px">
+                    <use href="./images/icons.svg.svg#icon-instagram"></use>
+                </svg>
+            </a>
+            </li>
+            <li class="footer-socials-item">
+                <a
+                class="footer-socials-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                >
+                <svg class="footer-socials-icon" width="24px" height="24px">
+                    <use href="./images/icons.svg.svg#icon-twitter"></use>
+                </svg>
+            </a>
+            </li>
+            <li class="footer-socials-item">
+                <a
+                class="footer-socials-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                >
+                <svg class="footer-socials-icon" width="24px" height="24px">
+                    <use href="./images/icons.svg.svg#icon-facebook"></use>
+                </svg>
+            </a>
+            </li>
+            <li class="footer-socials-item">
+                <a
+                class="footer-socials-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                >
+                <svg class="footer-socials-icon" width="24px" height="24px">
+                    <use href="./images/icons.svg.svg#icon-linkedin"></use>
+                </svg>
+            </a>
+            </li>
+        </ul>
+        </div>
     </div>
 </footer>
 </body>
