--- a/index.html
+++ b/index.html
@@ -459,7 +459,13 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button type="button" class="modal-close-btn" data-modal-close>X</button>
+            <button type="button" class="modal-close-btn" data-modal-close>
+                <a class="close-btn" href="" target="_blank">
+                    <svg class="close-btn-icon" width="8px" height="8px">
+                        <use href="./images/icons.svg.svg#icon-close-btn"></use>
+                    </svg>
+                </a>
+            </button>
         </div>
     </div>
     <script src="./js/modal.js"></script>
