--- a/index.html
+++ b/index.html
@@ -102,74 +102,70 @@
 
             <section class="team">
                 <div class="container">
-                <h2 class="team-title">Our Team</h2>
-                <ul class="team-list list">
-                    <li class="team-item">
-                        <img class="team-img" src="./images/img-team-1.jpg" width="264" height="260" alt="picture-of-Product-Designer">
-                        <div class="team-worker">  
-                        <h3 class="team-subtitle">Mark Guerrero</h3>
-                            <p class="team-text">Product Designer</p>
-                        </div> 
-                        <div class="team-socials">
-                            <ul class="team-socials-list list">
-                                <li class="team-socials-item">
-                                    <a
-                                    class="team-socials-link link"
-                                    href=""
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >
-                                    <svg class="team-socials-icon" width="16px" height="16px">
-                                        <use href="./images/icons.svg.svg#icon-instagram"></use>
-                                    </svg>
-                                </a>  
-                                </li>
-                                <li class="team-socials-item">
-                                    <a
-                                    class="team-socials-link link"
-                                    href=""
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >
-                                    <svg class="team-socials-icon" width="16px" height="16px">
-                                        <use href="./images/icons.svg.svg#icon-twitter"></use>
-                                    </svg>
-                                </a>  
-                                </li>
-                                <li class="team-socials-item">
-                                    <a
-                                    class="team-socials-link link"
-                                    href=""
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >
-                                    <svg class="team-socials-icon" width="16px" height="16px">
-                                        <use href="./images/icons.svg.svg#icon-facebook"></use>
-                                    </svg>
-                                </a>  
-                                </li>
-                                <li class="team-socials-item">
-                                    <a
-                                    class="team-socials-link link"
-                                    href=""
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >
-                                    <svg class="team-socials-icon" width="16px" height="16px">
-                                        <use href="./images/icons.svg.svg#icon-linkedin"></use>
-                                    </svg>
-                                </a>  
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
+                    <h2 class="team-title">Our Team</h2>
+                    <ul class="team-list list">
+                        <li class="team-item">
+                            <img class="team-img" src="./images/img-team-1.jpg" width="264" height="260" alt="picture-of-Product-Designer">
+                            <div class="team-worker">  
+                                <h3 class="team-subtitle">Mark Guerrero</h3>
+                                <p class="team-text">Product Designer</p>
+                                <ul class="team-socials-list list">
+                                    <li class="team-socials-item">
+                                        <a
+                                            class="team-socials-link link"
+                                            href=""
+                                            target="_blank"
+                                            rel="noopener noreferrer"
+                                        >
+                                            <svg class="team-socials-icon" width="16" height="16">
+                                                <use href="./images/icons.svg.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>  
+                                    </li>
+                                    <li class="team-socials-item">
+                                        <a
+                                            class="team-socials-link link"
+                                            href=""
+                                            target="_blank"
+                                            rel="noopener noreferrer"
+                                        >
+                                            <svg class="team-socials-icon" width="16" height="16">
+                                                <use href="./images/icons.svg.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>  
+                                    </li>
+                                    <li class="team-socials-item">
+                                        <a
+                                            class="team-socials-link link"
+                                            href=""
+                                            target="_blank"
+                                            rel="noopener noreferrer"
+                                        >
+                                            <svg class="team-socials-icon" width="16" height="16">
+                                                <use href="./images/icons.svg.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>  
+                                    </li>
+                                    <li class="team-socials-item">
+                                        <a
+                                            class="team-socials-link link"
+                                            href=""
+                                            target="_blank"
+                                            rel="noopener noreferrer"
+                                        >
+                                            <svg class="team-socials-icon" width="16" height="16">
+                                                <use href="./images/icons.svg.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>  
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
                     <li class="team-item">
                         <img class="team-img" src="./images/img-team-2.jpg" width="264" height="260" alt="picture-of-Frontend-Developer">
                         <div class="team-worker">     
                         <h3 class="team-subtitle">Tom Ford</h3>
                             <p class="team-text">Frontend Developer</p>
-                            </div>
-                            <div class="team-socials">
                                 <ul class="team-socials-list list">
                                     <li class="team-socials-item">
                                         <a
@@ -178,7 +174,7 @@
                                         target="_blank"
                                         rel="noopener noreferrer"
                                         >
-                                        <svg class="team-socials-icon" width="16px" height="16px">
+                                        <svg class="team-socials-icon" width="16" height="16">
                                             <use href="./images/icons.svg.svg#icon-instagram"></use>
                                         </svg>
                                     </a>  
@@ -190,7 +186,7 @@
                                         target="_blank"
                                         rel="noopener noreferrer"
                                         >
-                                        <svg class="team-socials-icon" width="16px" height="16px">
+                                        <svg class="team-socials-icon" width="16" height="16">
                                             <use href="./images/icons.svg.svg#icon-twitter"></use>
                                         </svg>
                                     </a>  
@@ -202,7 +198,7 @@
                                         target="_blank"
                                         rel="noopener noreferrer"
                                         >
-                                        <svg class="team-socials-icon" width="16px" height="16px">
+                                        <svg class="team-socials-icon" width="16" height="16">
                                             <use href="./images/icons.svg.svg#icon-facebook"></use>
                                         </svg>
                                     </a>  
@@ -214,21 +210,19 @@
                                         target="_blank"
                                         rel="noopener noreferrer"
                                         >
-                                        <svg class="team-socials-icon" width="16px" height="16px">
+                                        <svg class="team-socials-icon" width="16" height="16">
                                             <use href="./images/icons.svg.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>  
-                                    </li>
-                                </ul>
-                            </div>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img class="team-img" src="./images/img-team-3.jpg" width="264" height="260" alt="picture-of-Marketing">
                         <div class="team-worker">    
                         <h3 class="team-subtitle">Camila Garcia</h3>
                             <p class="team-text">Marketing</p>
-                        </div>
-                        <div class="team-socials">
                             <ul class="team-socials-list list">
                                 <li class="team-socials-item">
                                     <a
@@ -237,7 +231,7 @@
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >
-                                    <svg class="team-socials-icon" width="16px" height="16px">
+                                    <svg class="team-socials-icon" width="16" height="16">
                                         <use href="./images/icons.svg.svg#icon-instagram"></use>
                                     </svg>
                                 </a>  
@@ -249,7 +243,7 @@
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >
-                                    <svg class="team-socials-icon" width="16px" height="16px">
+                                    <svg class="team-socials-icon" width="16" height="16">
                                         <use href="./images/icons.svg.svg#icon-twitter"></use>
                                     </svg>
                                 </a>  
@@ -261,7 +255,7 @@
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >
-                                    <svg class="team-socials-icon" width="16px" height="16px">
+                                    <svg class="team-socials-icon" width="16" height="16">
                                         <use href="./images/icons.svg.svg#icon-facebook"></use>
                                     </svg>
                                 </a>  
@@ -273,21 +267,19 @@
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >
-                                    <svg class="team-socials-icon" width="16px" height="16px">
+                                    <svg class="team-socials-icon" width="16" height="16">
                                         <use href="./images/icons.svg.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>  
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
                     <li class="team-item">
                         <img class="team-img" src="./images/img-team-4.jpg" width="264" height="260" alt="picture-of-UI-Designer">
                         <div class="team-worker">     
                         <h3 class="team-subtitle">Daniel Wilson</h3>
                             <p class="team-text">UI Designer</p>
-                        </div>
-                        <div class="team-socials">
                             <ul class="team-socials-list list">
                                 <li class="team-socials-item">
                                     <a
@@ -296,7 +288,7 @@
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >
-                                    <svg class="team-socials-icon" width="16px" height="16px">
+                                    <svg class="team-socials-icon" width="16" height="16">
                                         <use href="./images/icons.svg.svg#icon-instagram"></use>
                                     </svg>
                                 </a>  
@@ -308,7 +300,7 @@
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >
-                                    <svg class="team-socials-icon" width="16px" height="16px">
+                                    <svg class="team-socials-icon" width="16" height="16">
                                         <use href="./images/icons.svg.svg#icon-twitter"></use>
                                     </svg>
                                 </a>  
@@ -320,7 +312,7 @@
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >
-                                    <svg class="team-socials-icon" width="16px" height="16px">
+                                    <svg class="team-socials-icon" width="16" height="16">
                                         <use href="./images/icons.svg.svg#icon-facebook"></use>
                                     </svg>
                                 </a>  
@@ -332,14 +324,14 @@
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >
-                                    <svg class="team-socials-icon" width="16px" height="16px">
+                                    <svg class="team-socials-icon" width="16" height="16">
                                         <use href="./images/icons.svg.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>  
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
                 </ul>
             </div>
             </section>
@@ -412,7 +404,7 @@
                     target="_blank"
                     rel="noopener noreferrer"
                     >
-                    <svg class="footer-socials-icon" width="24px" height="24px">
+                    <svg class="footer-socials-icon" width="24" height="24">
                         <use href="./images/icons.svg.svg#icon-instagram"></use>
                     </svg>
                 </a>
@@ -424,7 +416,7 @@
                     target="_blank"
                     rel="noopener noreferrer"
                     >
-                    <svg class="footer-socials-icon" width="24px" height="24px">
+                    <svg class="footer-socials-icon" width="24" height="24">
                         <use href="./images/icons.svg.svg#icon-twitter"></use>
                     </svg>
                 </a>
@@ -436,7 +428,7 @@
                     target="_blank"
                     rel="noopener noreferrer"
                     >
-                    <svg class="footer-socials-icon" width="24px" height="24px">
+                    <svg class="footer-socials-icon" width="24" height="24">
                         <use href="./images/icons.svg.svg#icon-facebook"></use>
                     </svg>
                 </a>
@@ -448,7 +440,7 @@
                     target="_blank"
                     rel="noopener noreferrer"
                     >
-                    <svg class="footer-socials-icon" width="24px" height="24px">
+                    <svg class="footer-socials-icon" width="24" height="24">
                         <use href="./images/icons.svg.svg#icon-linkedin"></use>
                     </svg>
                 </a>
