--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     </a>
         
                     <ul class="header-menu-list list">
-                        <li class="header-menu-item current">
+                        <li class="header-menu-item current-1">
                             <a class="header-menu-link link" href="./index.html">Studio</a></li>
                         <li class="header-menu-item">
                             <a class="header-menu-link link" href="./portfolio.html">Portfolio</a></li>
@@ -50,7 +50,7 @@
                 <ul class="advantages-list list">
                     <li class="advantages-item">
                         <div class="advantages-item-top">
-                            <svg class="advantages-item-icon" width="64px" height="64px">
+                            <svg class="advantages-item-icon" width="64" height="64">
                                 <use href="./images/icons.svg.svg#icon-antenna"></use>
                             </svg>
                         </div>
@@ -60,7 +60,7 @@
                     </li>
                     <li class="advantages-item">
                         <div class="advantages-item-top">
-                            <svg class="advantages-item-icon" width="64px" height="64px">
+                            <svg class="advantages-item-icon" width="64" height="64">
                                 <use href="./images/icons.svg.svg#icon-clock"></use>
                             </svg>
                         </div>
@@ -69,7 +69,7 @@
                     </li>
                     <li class="advantages-item">
                         <div class="advantages-item-top">
-                            <svg class="advantages-item-icon" width="64px" height="64px">
+                            <svg class="advantages-item-icon" width="64" height="64">
                                 <use href="./images/icons.svg.svg#icon-diagram"></use>
                             </svg>
                         </div>
@@ -78,7 +78,7 @@
                     </li>
                     <li class="advantages-item">
                         <div class="advantages-item-top">
-                            <svg class="advantages-item-icon" width="64px" height="64px">
+                            <svg class="advantages-item-icon" width="64" height="64">
                                 <use href="./images/icons.svg.svg#icon-astronaut"></use>
                             </svg>
                         </div>
@@ -337,50 +337,50 @@
             </section>
 
             <section class="customers">
-                <div class="customers-container">
+                <div class="container customers-container">
                     <h2 class="customers-title">Customers</h2>
                     <ul class="customers-list list">
                         <li class="customers-item">
-                            <div class="customers-item-top">
-                                <svg class="customers-item-icon" width="104px" height="56px">
+                            <a class="customers-link" href="" target="_blank">
+                                <svg class="customers-item-icon" width="104" height="56">
                                     <use href="./images/icons.svg.svg#icon-logo-1"></use>
-                                </svg>
-                            </div>  
+                                </svg> 
+                            </a>
                         </li>
                         <li class="customers-item">
-                            <div class="customers-item-top">
-                                <svg class="customers-item-icon" width="104px" height="56px">
+                            <a class="customers-link" href="" target="_blank">
+                                <svg class="customers-item-icon" width="104" height="56">
                                     <use href="./images/icons.svg.svg#icon-logo-2"></use>
-                                </svg>
-                            </div>  
+                                </svg> 
+                            </a>
                         </li>
                         <li class="customers-item">
-                            <div class="customers-item-top">
-                                <svg class="customers-item-icon" width="104px" height="56px">
+                            <a class="customers-link" href="" target="_blank">
+                                <svg class="customers-item-icon" width="104" height="56">
                                     <use href="./images/icons.svg.svg#icon-logo-3"></use>
                                 </svg>
-                            </div>  
+                            </a>
                         </li>
                         <li class="customers-item">
-                            <div class="customers-item-top">
-                                <svg class="customers-item-icon" width="104px" height="56px">
+                            <a class="customers-link" href="" target="_blank">
+                                <svg class="customers-item-icon" width="104" height="56">
                                     <use href="./images/icons.svg.svg#icon-logo-4"></use>
                                 </svg>
-                            </div>  
+                            </a>
                         </li>
                         <li class="customers-item">
-                            <div class="customers-item-top">
-                                <svg class="customers-item-icon" width="104px" height="56px">
+                            <a class="customers-link" href="" target="_blank">
+                                <svg class="customers-item-icon" width="104" height="56">
                                     <use href="./images/icons.svg.svg#icon-logo-5"></use>
                                 </svg>
-                            </div>  
+                            </a>
                         </li>
                         <li class="customers-item">
-                            <div class="customers-item-top">
-                                <svg class="customers-item-icon" width="104px" height="56px">
+                            <a class="customers-link" href="" target="_blank"> 
+                                <svg class="customers-item-icon" width="104" height="56">
                                     <use href="./images/icons.svg.svg#icon-logo-6"></use>
-                                </svg>
-                            </div>  
+                                </svg> 
+                            </a>
                         </li>
                         </ul>
                 </div>
