--- a/portfolio.html
+++ b/portfolio.html
@@ -202,7 +202,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 >
-                <svg class="footer-socials-icon" width="24px" height="24px">
+                <svg class="footer-socials-icon" width="24" height="24">
                     <use href="./images/icons.svg.svg#icon-instagram"></use>
                 </svg>
             </a>
@@ -214,7 +214,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 >
-                <svg class="footer-socials-icon" width="24px" height="24px">
+                <svg class="footer-socials-icon" width="24" height="24">
                     <use href="./images/icons.svg.svg#icon-twitter"></use>
                 </svg>
             </a>
@@ -226,7 +226,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 >
-                <svg class="footer-socials-icon" width="24px" height="24px">
+                <svg class="footer-socials-icon" width="24" height="24">
                     <use href="./images/icons.svg.svg#icon-facebook"></use>
                 </svg>
             </a>
@@ -238,7 +238,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 >
-                <svg class="footer-socials-icon" width="24px" height="24px">
+                <svg class="footer-socials-icon" width="24" height="24">
                     <use href="./images/icons.svg.svg#icon-linkedin"></use>
                 </svg>
             </a>
